--- a/config.json
+++ b/config.json
@@ -1,7 +1,9 @@
 {
     "users": {
         "David": "masolution",
-        "Manon": "lasolution"
+        "Manon": "lasolution",
+        "Jean-Pierre": "changeme"
     },
-    "gpt_model": "gpt-4o"
+    "gpt_model": "gpt-4o",
+    "ENDPOINT": "https://mvd-customgpt-sc.openai.azure.com/openai/deployments/gpt-4o/chat/completions?api-version=2024-02-15-preview"
 }
