--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
         "Jean-Pierre": "changeme"
     },
     "gpt_model": "gpt-4o",
-    "ENDPOINT": "https://mvd-customgpt-sc.openai.azure.com/openai/deployments/gpt-4o/chat/completions?api-version=2024-02-15-preview"
+    "ENDPOINT": "https://mvd-customgpt-sc.openai.azure.com/openai/deployments/gpt-4o/chat/completions?api-version=2024-02-15-preview",
+    "zoomfactor": 4
 }
